--- a/stylesheets/css/infomodify.css
+++ b/stylesheets/css/infomodify.css
@@ -2,6 +2,7 @@
     width: 70%;
     margin-left: 10%;
     margin-top: 12%;
+    margin-bottom: 5%;
     display: flex;
     justify-content: center;
 }
@@ -64,23 +65,23 @@
     font-size: 10px;
     cursor: pointer;
 }
-table{
+#infomodifymain table{
     /* position: absolute; */
     left: 500px;
     top: 630px;
     width: 500px;
 }
-tr{
+#infomodifymain tr{
     height: 60px;
 }
-td{
+#infomodifymain td{
     padding-left: 20px;
 }
-input{
+#infomodifymain input{
     height: 25px;
     margin-bottom: 5px;
 }
-select{
+#infomodifymain select{
     height: 30px;
 }
 .modifycontent{
