--- a/stylesheets/css/infomodify.css
+++ b/stylesheets/css/infomodify.css
@@ -19,6 +19,19 @@
     border-bottom: 1px solid lightgray;
     
 }
+.cate-mylist{
+    border-bottom: 1px solid lightgray;
+    padding: 0px;
+    width: 100px;
+    
+}
+.cate-mylist li a{
+    font-size:18px;
+}
+#menu a {
+    font-family: 'nanumL';
+    font-size: 1rem;
+}
 #logout{
     /* position: absolute; */
     top: 120px;
