--- a/stylesheets/css/mypage.css
+++ b/stylesheets/css/mypage.css
@@ -21,6 +21,20 @@
     left: 50px;
     width: 150px;
 }
+#menu a {
+    font-family: 'nanumL';
+    font-size: 1rem;
+}
+
+.cate-mylist{
+    border-bottom: 1px solid lightgray;
+    padding: 0px;
+    width: 100px;
+    
+}
+.cate-mylist li a{
+    font-size:18px;
+}
 #mylist{
     border-bottom: 1px solid lightgray;
     
